<resources>
    <string name="app_name">QuoteBuddy</string>
    <string name="title_activity_user_menu">UserMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_search">Search Quotes</string>
    <string name="input_name">Name</string>
    <string name="input_email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="password">Password</string>
    <string name="quote_buddy">Quote Buddy</string>
    <string name="image">image</string>
    <string name="fav_this_quote">Fav This Quote</string>
    <string name="tags">Tags:</string>
    <string name="no_acc">No account yet? Sign Up</string>
    <string name="login">Login</string>
    <string name="quote">quote</string>
    <string name="username_or_email">Username or Email</string>
    <string name="tokenResponse">token</string>
    <string name="loginResponse">login</string>
    <string name="emailResponse">email</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to logout?</string>
    <string name="quoteAuthor">quoteAuthor</string>
    <string name="quote_added">Quote added to Favorites list!</string>
    <string name="quote_deleted">Quote deleted from Favorites list</string>
    <string name="welcome">Welcome,</string>
    <string name="press_back">Press the back button again for exit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="auth">Authenticating…</string>
    <string name="response">Response:</string>
    <string name="login_success">Login Successfully!</string>
    <string name="invalid_mail_pass">Invalid email or password</string>
    <string name="enter_valid">Enter a valid email address</string>
    <string name="must_be_between">Must be between 5 and 120 alphanumeric characters</string>
    <string name="restoreKey">restoreKey</string>
    <string name="no_quotes_found">no quotes found</string>
    <string name="error">error</string>
    <string name="defaultStringIfNothingFound">defaultStringIfNothingFound</string>
    <string name="creating_acc">Creating Account…</string>
    <string name="sign_up_success">Sign Up Successfully!</string>
    <string name="already_exists">Username or Email already exist</string>
    <string name="must_be_between_2">Must be between 1 and 20 alphanumeric characters</string>
    <string name="author">author</string>
    <string name="asda">asda</string>
</resources>
