<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nikoarap.favqsapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.nikoarap.favqsapp.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.nikoarap.favqsapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
</navigation>